--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+ @import 'https://fonts.googleapis.com/css?family=Roboto';
 * {
     box-sizing: border-box;
+    /* border: 1px solid blue; */
 }
 body{
     background-image: url('bg.jpg');
@@ -88,7 +90,7 @@ li{
     margin-right: auto;
     background-color: rgba(200,200,200,0.4);
     text-shadow:none;
-/*    font-weight: 200;*/
+    /*    font-weight: 200;*/
 }
 
 .projets li{
@@ -99,13 +101,12 @@ li{
 h2{
     text-shadow:none;
 }
-
-strong{
-    font-weight:500;
+h3{
+    text-shadow:none;
 }
 
-.formation{
-    text-shadow:none;
+strong{
+    font-weight:700;
 }
 
 .drapeaux{
@@ -140,4 +141,95 @@ strong{
     width: 150px;
     height: 20px;
     text-indent: -9999px;
+}
+
+
+/***** version mobile ****/
+@media screen and (max-width: 480px) {
+    .wrapper {
+        width: 99%;
+        
+    }
+
+
+    body{
+        background-image: url('bg-petit.jpg');
+        font-size: 1rem;
+    }
+    img{
+        top:30px;
+    }
+
+    .gauche{
+        width:100%;
+        padding-left: 10px;
+        line-height: 1.5;
+    }
+    .droite{
+        width:100%;
+        padding-left: 10px;
+        line-height: 1.5;
+    }
+
+    .row {
+        margin-bottom: 10px;
+    }
+
+    .site-header{
+        margin-bottom: 5px;
+    }
+
+    .pays{
+        font-size: 1rem;
+        width: 22%;
+        margin-bottom: 15px;
+    }
+    .pays img{
+        max-height: 70%;
+    }
+
+    .comp li{
+        font-size: 0.8rem;
+    }
+
+    .drapeaux{
+        width: 100%;
+    }
+    h3{
+        text-shadow:none;
+        
+    }
+
+    .autres{
+        display: inline-block;
+        background-image: url("autres-small.png");
+        background-size: contain;
+        background-repeat: no;
+        width: 195px;
+        height: 27px;
+        
+    }
+
+    
+
+    h2 {
+        font-size: 1rem;
+    }
+    h3{
+        font-size: 1rem;
+    }
+
+    .pays{
+        width:33%;
+        font-size: 0.5rem;
+        height:40px;
+    }
+    .pays img{
+        display:block;
+        max-width: 50%;
+        height: auto;
+        left: 25px;
+    }
+    
+
 }
