background compressed and cropped

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     /* border: 1px solid blue; */
 }
 body{
-    background-image: url('bg.jpg');
+    background-image: url('bg3.jpg');
     background-position: center center;
     font-family: 'Roboto', sans-serif;
     /*font-weight: 100;*/
