--- a/style.css
+++ b/style.css
@@ -3,6 +3,20 @@
     box-sizing: border-box;
     /* border: 1px solid blue; */
 }
+
+.sprites { background: url(sprites.png) no-repeat;
+         }
+.al { width: 67px; height: 48px; background-position: -236px 0;  }
+.es { width: 71px; height: 47px; background-position: -92px 0; }
+.fr { width: 71px; height: 47px; background-position: -164px 0; }
+.uk { width: 91px; height: 46px; background-position: 0 0; }
+
+.tpays{
+    text-align:center;
+    margin: 20px;
+    float: left;
+}
+
 body{
     background-image: url('bg3.jpg');
     background-position: center center;
@@ -111,8 +125,8 @@ strong{
 
 .drapeaux{
     margin: auto;
-    width: 60%;
-    text-align:center;
+    width: 50%;
+    /* text-align:center; */
 }
 
 .pays{
@@ -191,9 +205,15 @@ strong{
     .comp li{
         font-size: 0.8rem;
     }
-
     .drapeaux{
-        width: 100%;
+        padding:0;
+        width:100%;
+    }
+
+    .tpays{
+        margin-bottom:0px;
+        margin-top: 0px;
+        height:73px;
     }
     h3{
         text-shadow:none;
